tests/ui/macros/metavar-expressions/concat-trace-errors.stderr
error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-trace-errors.rs:11:24
   |
LL |         ${concat("hi", " bye ")};
   |                        ^^^^^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-trace-errors.rs:11:11
   |
LL |         ${concat("hi", " bye ")};
   |           ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-trace-errors.rs:14:24
   |
LL |         ${concat("hi", "-", "bye")};
   |                        ^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-trace-errors.rs:14:11
   |
LL |         ${concat("hi", "-", "bye")};
   |           ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-trace-errors.rs:17:22
   |
LL |         ${concat($a, "-")};
   |                      ^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-trace-errors.rs:17:11
   |
LL |         ${concat($a, "-")};
   |           ^^^^^^

error: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-trace-errors.rs:25:24
   |
LL |         const _: () = ${concat("hi", $a, "bye")};
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | post_expansion!("!");
   | -------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-trace-errors.rs:25:39
   |
LL |         const _: () = ${concat("hi", $a, "bye")};
   |                                       ^
   = note: this error originates in the macro `post_expansion` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-trace-errors.rs:36:24
   |
LL |         const _: () = ${concat($a, $b, $c, $d, $e)};
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | post_expansion_many!(a, b, c, ".d", e);
   | -------------------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-trace-errors.rs:36:45
   |
LL |         const _: () = ${concat($a, $b, $c, $d, $e)};
   |                                             ^
   = note: this error originates in the macro `post_expansion_many` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

